// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureCard Component Logo Overlay matches snapshot with left logo position 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-hfmelv-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-13ef5fl"
    >
      <img
        alt="Test Feature"
        class="MuiBox-root css-xl7rug"
        src="test-image.png"
      />
    </div>
    <div
      class="MuiCardContent-root css-2b28wi-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1c41tsn-MuiTypography-root"
      >
        Test Feature
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body2 css-18zsghv-MuiTypography-root"
      >
        This is a test description
      </p>
    </div>
    <img
      alt=""
      aria-hidden="true"
      class="MuiBox-root css-1r91nb1"
      src="logo.png"
    />
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-1pyq4h9-MuiCardActions-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorInfo MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorInfo css-1ubbeta-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Learn More
        <span
          class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeLarge css-z4rqyd-MuiButton-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowForwardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`FeatureCard Component Logo Overlay matches snapshot with right logo position 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-hfmelv-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-13ef5fl"
    >
      <img
        alt="Test Feature"
        class="MuiBox-root css-xl7rug"
        src="test-image.png"
      />
    </div>
    <div
      class="MuiCardContent-root css-2b28wi-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1c41tsn-MuiTypography-root"
      >
        Test Feature
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body2 css-18zsghv-MuiTypography-root"
      >
        This is a test description
      </p>
    </div>
    <img
      alt=""
      aria-hidden="true"
      class="MuiBox-root css-1r91nb1"
      src="logo.png"
    />
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-1pyq4h9-MuiCardActions-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorInfo MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorInfo css-1ubbeta-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Learn More
        <span
          class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeLarge css-z4rqyd-MuiButton-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowForwardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`FeatureCard Component Rendering matches snapshot 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-hfmelv-MuiPaper-root-MuiCard-root"
  >
    <div
      class="MuiBox-root css-13ef5fl"
    >
      <img
        alt="Test Feature"
        class="MuiBox-root css-xl7rug"
        src="test-image.png"
      />
    </div>
    <div
      class="MuiCardContent-root css-2b28wi-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-1c41tsn-MuiTypography-root"
      >
        Test Feature
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body2 css-18zsghv-MuiTypography-root"
      >
        This is a test description
      </p>
    </div>
    <div
      class="MuiCardActions-root MuiCardActions-spacing css-1pyq4h9-MuiCardActions-root"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorInfo MuiButton-root MuiButton-contained MuiButton-containedInfo MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorInfo css-1ubbeta-MuiButtonBase-root-MuiButton-root"
        tabindex="0"
        type="button"
      >
        Learn More
        <span
          class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeLarge css-z4rqyd-MuiButton-endIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowForwardIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
</div>
`;
